<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/NestedScrollBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/bg_earning"
    tools:context=".Fragment.profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:padding="5dp">

            <FrameLayout
                android:layout_width="0dp"
                android:background="@color/white"

                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_accounts_profile_photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal|top"
                    android:background="@mipmap/ic_launcher_round"
                    android:scaleType="centerCrop" />

                <ImageButton
                    android:id="@+id/ib_accounts_edit_account"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_marginLeft="35dp"
                    android:background="@color/white"
                    android:elevation="4dp"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/my_account" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="110dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/my_account"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/red"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/name"
                        android:textColor="@color/red" />


                    <TextView
                        android:id="@+id/etxt_profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/gray_transparent_70"
                        android:inputType="textPersonName|textCapWords"
                        android:lines="1"
                        android:maxLines="1"
                        android:minHeight="40dp"
                        android:text="@string/name"
                        android:textColor="@color/text_2" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_mobile"
                        android:textColor="@color/red" />


                    <TextView
                        android:id="@+id/txt_profile_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="?selectableItemBackground"
                        android:gravity="bottom"
                        android:minHeight="35dp"
                        android:text="99887766554"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/text_2" />


                </LinearLayout>


            </FrameLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/drawer_background"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="50dp">


            <LinearLayout
                android:padding="10dp"
                android:id="@+id/ll_change_language"
                style="@style/MenuItemParent"

                android:background="@color/white">

                <ImageView
                    style="@style/MenuItemImage"
                    app:srcCompat="@drawable/note" />

                <TextView
                    style="@style/MenuItemLabel"
                    android:text="@string/language" />

                <ImageView
                    style="@style/MenuItemArrow"
                    app:srcCompat="@drawable/ic_toolbar_back" />
            </LinearLayout>
            <!--
                        <View
                            style="@style/MenuItemUnderline"/>-->


        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
